# cielo_azure_billing

./: .gitignore  README.md  REFACTORING_SUMMARY.md  SPEC.md  manage.py  pyproject.toml
billing/: admin.py  apps.py  auth.py  filters.py  middleware.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
billing/management/commands/: backfill_resource_name.py  download_blob_files.py  fetch_and_import_from_blob.py  import_cost_csv.py  inspect_blob_source.py  inspect_blob_source_old.py
billing/migrations/: 0001_initial.py  0002_add_filter_fields.py  0002_blob_source_base_folder.py  0003_rename_importsnapshot_to_costreportsnapshot.py  0003_snapshot_created_at_and_costentry_unique.py  0004_add_blob_source_and_update_snapshot.py  0004_costreportsnapshot_status.py  0005_alter_costreportsnapshot_status.py  0005_update_blob_source.py
billing/tests/: test_available_dates.py  test_get_latest_snapshot.py  test_get_latest_snapshots.py  test_importer.py  test_resource_group_totals_api.py  test_summary_api.py
cielo_azure_billing/: asgi.py  settings.py  urls.py  wsgi.py
docs/: API_REFERENCE.md  BLOB_IMPORT.md  CACHING.md  CostsFilteringGuide.md  DJANGO_COMMANDS.md  INTEGRATION_GUIDE.md  SPEC.md
example_django_project/: asgi.py  settings.py  urls.py  wsgi.py
src/cielo/azure/cost_analysis/: __init__.py  apps.py  filters.py  middleware.py  permissions.py  services.py  signals.py  views.py
src/cielo/azure/cost_analysis/caching/: __init__.py  backends.py
src/cielo/azure/cost_analysis/migrations/: 0006_resource_resource_name.py
(+11 files in other folders)
