[tool.poetry]
name = "cielo-azure-billing"
version = "0.1.0"
description = ""
authors = [" vilosource <vilosource@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
djangorestframework = "^3.15"
pydantic = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
