[tool.poetry]
name = "cielo-azure-billing"
version = "0.1.0"
description = ""
authors = [" vilosource <vilosource@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
djangorestframework = "^3.15"
pydantic = "^2.0"
drf-spectacular = "^0.28.0"
django-filter = "^24.2"
azure-identity = "^1.16.0"
azure-storage-blob = "^12.19.0"
django-redis = "^5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
